src/test/deca/context/invalid/created/extends-field-method.deca
//Description :
// Test d'un appel d'attribut
//
// Resultats :
// Erreur

class A {
    int a;

    void b() {
        print("bjr non");
    }
}

class B extends A {
    protected int b = 2;
}

{
    A a = new B();
    a.b;
}
